# VM2ParkingPass

./: .replit  README.md  app.py  config.yml  layout.yml  pyproject.toml  replit.md
attached_assets/: Pasted-Awesome-thanks-for-the-files-Since-the-nights-value-must-be-computed-from-Arrival-Departure-here-1757020932718_1757020932719.txt
output/: .gitkeep
static/: app.js
templates/: index.html  preview.html
uploads/: .gitkeep  20250904_215529_Arrivals.xls
