[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pypdf>=6.0.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "qrcode>=8.2",
    "reportlab>=4.4.3",
    "werkzeug>=3.1.3",
    "xlrd>=2.0.2",
]
